UserService modified to fit with instruction specs
